--- a/index.html
+++ b/index.html
@@ -19,6 +19,193 @@
         </nav>
     </header>
 
+    <!-- Food Items -->
+    <div class="container">
+
+        <!-- First Section [thus, left section] -->
+        <section class="section-one">
+
+            <!-- fish -->
+            <div class="card">
+                <div class="title-one">
+                    <div class="img-container">
+                        <img src="./img/fish.png" alt="picture of a fish">
+                    </div>
+                    <p>fish</p>
+                </div>
+                <div class="title-two">
+                    <div class="progress-bar-container">
+                        <div class="progress-bar"></div>
+                    </div>
+                    <div class="percentage-fish">
+                        <p>70%</p>
+                    </div>
+                </div>
+            </div>
+
+            <!-- fruits -->
+            <div class="card">
+                <div class="title-one">
+                    <img src="./img/fruits.png" alt="picture of fruits">
+                    <p>fruits</p>
+                </div>
+                <div class="title-two">
+                    <div class="progress-bar-container">
+                        <div class="progress-bar"></div>
+                    </div>
+                    <div class="percentage-fruits">
+                        <p>50%</p>
+                    </div>
+                </div>
+            </div>
+
+            <!-- meat -->
+            <div class="card">
+                <div class="title-one">
+                    <div class="img-container">
+                        <img src="./img/meat.png" alt="picture of a meat">
+                    </div>
+
+                    <p>meat</p>
+                </div>
+                <div class="title-two">
+                    <div class="progress-bar-container">
+                        <div class="progress-bar"></div>
+                    </div>
+                    <div class="percentage-meat">
+                        <p>80%</p>
+                    </div>
+                </div>
+            </div>
+
+            <!-- milk -->
+            <div class="card">
+                <div class="title-one">
+                    <div class="img-container">
+                        <img src="./img/milk.png" alt="picture of milk">
+                    </div>
+                    <p>milk</p>
+                </div>
+                <div class="title-two">
+                    <div class="progress-bar-container">
+                        <div class="progress-bar"></div>
+                    </div>
+                    <div class="percentage-milk">
+                        <p>40%</p>
+                    </div>
+                </div>
+            </div>
+
+            <!-- oatmeal -->
+            <div class="card">
+                <div class="title-one">
+                    <div class="img-container">
+                        <img src="./img/oatmeal.png" alt="picture of an oatmeal">
+                    </div>
+                    <p>oatmeal</p>
+                </div>
+                <div class="title-two">
+                    <div class="progress-bar-container">
+                        <div class="progress-bar"></div>
+                    </div>
+                    <div class="percentage">
+                        <p>20%</p>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <!-- Second Section [thus, right section] -->
+        <section class="section-two">
+
+            <!-- peas -->
+            <div class="card">
+                <div class="title-one">
+                    <div class="img-container">
+                        <img src="./img/peas.png" alt="picture of peas">
+                    </div>
+                    <p>peas</p>
+                </div>
+                <div class="title-two">
+                    <div class="progress-bar-container">
+                        <div class="progress-bar"></div>
+                    </div>
+                    <div class="percentage-peas">
+                        <p>40%</p>
+                    </div>
+                </div>
+            </div>
+
+            <!-- vegetables -->
+            <div class="card">
+                <div class="title-one">
+                    <div class="img-container">
+                        <img src="./img/vegetables.png" alt="picture of vegetables">
+                    </div>
+                    <p>vegetables</p>
+                </div>
+                <div class="title-two">
+                    <div class="progress-bar-container">
+                        <div class="progress-bar"></div>
+                    </div>
+                    <div class="percentage-vegetables">
+                        <p>68%</p>
+                    </div>
+                </div>
+            </div>
+
+            <!-- water -->
+            <div class="card">
+                <div class="title-one">
+                    <div class="img-container">
+                        <img src="./img/water.png" alt="picture of water">
+                    </div>
+                    <p>water</p>
+                </div>
+                <div class="title-two">
+                    <div class="progress-bar-container">
+                        <div class="progress-bar"></div>
+                    </div>
+                    <div class="percentage-water">
+                        <p>90%</p>
+                    </div>
+                </div>
+            </div>
+
+            <!-- wheat -->
+            <div class="card">
+                <div class="title-one">
+                    <img src="./img/wheat.png" alt="picture of wheat">
+                    <p>wheat</p>
+                </div>
+                <div class="title-two">
+                    <div class="progress-bar-container">
+                        <div class="progress-bar"></div>
+                    </div>
+                    <div class="percentage-wheat">
+                        <p>80%</p>
+                    </div>
+                </div>
+            </div>
+
+            <!-- eggs -->
+            <div class="card">
+                <div class="title-one">
+                    <img src="./img/egg.png" alt="picture of an egg">
+                    <p>eggs</p>
+                </div>
+                <div class="title-two">
+                    <div class="progress-bar-container">
+                        <div class="progress-bar"></div>
+                    </div>
+                    <div class="percentage-eggs">
+                        <p>70%</p>
+                    </div>
+                </div>
+            </div>
+        </section>
+    </div>
+
 </body>
 
 </html>
