--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Healthy Life</title>
+    <link rel="stylesheet" href="./style.css">
     <link rel="shortcut icon" href="./img/favicon.png" type="image/x-icon">
 </head>
 
@@ -14,8 +15,11 @@
     <!-- Navigation and Header -->
     <header>
         <nav>
-            <img src="./img/logo.png" alt="an image of a basket of food">
-            <h2>food dieting</h2>
+            <div class="nav-container">
+                <img src="./img/logo.png" alt="an image of a basket of food">
+                <h2>food diet</h2>
+            </div>
+
         </nav>
     </header>
 
@@ -35,9 +39,9 @@
                 </div>
                 <div class="title-two">
                     <div class="progress-bar-container">
-                        <div class="progress-bar"></div>
+                        <div class="progress-bar-fish"></div>
                     </div>
-                    <div class="percentage-fish">
+                    <div class="percentage">
                         <p>70%</p>
                     </div>
                 </div>
@@ -46,14 +50,17 @@
             <!-- fruits -->
             <div class="card">
                 <div class="title-one">
-                    <img src="./img/fruits.png" alt="picture of fruits">
+                    <div class="img-container">
+                        <img src="./img/fruits.png" alt="picture of fruits">
+                    </div>
+
                     <p>fruits</p>
                 </div>
                 <div class="title-two">
                     <div class="progress-bar-container">
-                        <div class="progress-bar"></div>
+                        <div class="progress-bar-fruits"></div>
                     </div>
-                    <div class="percentage-fruits">
+                    <div class="percentage">
                         <p>50%</p>
                     </div>
                 </div>
@@ -65,14 +72,13 @@
                     <div class="img-container">
                         <img src="./img/meat.png" alt="picture of a meat">
                     </div>
-
                     <p>meat</p>
                 </div>
                 <div class="title-two">
                     <div class="progress-bar-container">
-                        <div class="progress-bar"></div>
+                        <div class="progress-bar-meat"></div>
                     </div>
-                    <div class="percentage-meat">
+                    <div class="percentage">
                         <p>80%</p>
                     </div>
                 </div>
@@ -88,9 +94,9 @@
                 </div>
                 <div class="title-two">
                     <div class="progress-bar-container">
-                        <div class="progress-bar"></div>
+                        <div class="progress-bar-milk"></div>
                     </div>
-                    <div class="percentage-milk">
+                    <div class="percentage">
                         <p>40%</p>
                     </div>
                 </div>
@@ -106,7 +112,7 @@
                 </div>
                 <div class="title-two">
                     <div class="progress-bar-container">
-                        <div class="progress-bar"></div>
+                        <div class="progress-bar-oatmeal"></div>
                     </div>
                     <div class="percentage">
                         <p>20%</p>
@@ -128,9 +134,9 @@
                 </div>
                 <div class="title-two">
                     <div class="progress-bar-container">
-                        <div class="progress-bar"></div>
+                        <div class="progress-bar-peas"></div>
                     </div>
-                    <div class="percentage-peas">
+                    <div class="percentage">
                         <p>40%</p>
                     </div>
                 </div>
@@ -146,9 +152,9 @@
                 </div>
                 <div class="title-two">
                     <div class="progress-bar-container">
-                        <div class="progress-bar"></div>
+                        <div class="progress-bar-vegetables"></div>
                     </div>
-                    <div class="percentage-vegetables">
+                    <div class="percentage">
                         <p>68%</p>
                     </div>
                 </div>
@@ -164,9 +170,9 @@
                 </div>
                 <div class="title-two">
                     <div class="progress-bar-container">
-                        <div class="progress-bar"></div>
+                        <div class="progress-bar-water"></div>
                     </div>
-                    <div class="percentage-water">
+                    <div class="percentage">
                         <p>90%</p>
                     </div>
                 </div>
@@ -175,14 +181,17 @@
             <!-- wheat -->
             <div class="card">
                 <div class="title-one">
-                    <img src="./img/wheat.png" alt="picture of wheat">
+                    <div class="img-container">
+                        <img src="./img/wheat.png" alt="picture of wheat">
+                    </div>
+
                     <p>wheat</p>
                 </div>
                 <div class="title-two">
                     <div class="progress-bar-container">
-                        <div class="progress-bar"></div>
+                        <div class="progress-bar-wheat"></div>
                     </div>
-                    <div class="percentage-wheat">
+                    <div class="percentage">
                         <p>80%</p>
                     </div>
                 </div>
@@ -191,14 +200,17 @@
             <!-- eggs -->
             <div class="card">
                 <div class="title-one">
-                    <img src="./img/egg.png" alt="picture of an egg">
+                    <div class="img-container">
+                        <img src="./img/egg.png" alt="picture of an egg">
+                    </div>
+
                     <p>eggs</p>
                 </div>
                 <div class="title-two">
                     <div class="progress-bar-container">
-                        <div class="progress-bar"></div>
+                        <div class="progress-bar-eggs"></div>
                     </div>
-                    <div class="percentage-eggs">
+                    <div class="percentage">
                         <p>70%</p>
                     </div>
                 </div>
